--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "add_one_club-frontend",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:8080",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.5",
     "@testing-library/react": "^11.1.0",
