--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "add_one_club-frontend",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://localhost:5000",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.5",
     "@testing-library/react": "^11.1.0",
@@ -19,6 +18,7 @@
     "@types/redux-thunk": "^2.1.0",
     "antd": "^4.8.4",
     "axios": "^0.21.0",
+    "http-proxy-middleware": "^1.0.6",
     "moment": "^2.29.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
