--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/redux": "^3.6.0",
     "@types/redux-thunk": "^2.1.0",
     "antd": "^4.8.4",
+    "antd-mobile": "^2.3.4",
     "axios": "^0.21.0",
     "http-proxy-middleware": "^1.0.6",
     "moment": "^2.29.1",
